--- a/package.json
+++ b/package.json
@@ -17,13 +17,10 @@
   },
   "homepage": "https://github.com/dev-onenetworkecommerce/june#readme",
   "dependencies": {
-    "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "react": "^0.13.3"
   },
   "devDependencies": {
     "babel": "^5.8.23",
-    "babel-core": "^5.8.24",
-    "babel-loader": "^5.3.2",
-    "webpack": "^1.12.1"
+    "babel-core": "^5.8.24"
   }
 }
