--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch:script": "webpack -w -d -v",
+    "watch:style": "sass -r sass-css-importer ../styles/main.scss:dist/style.css",
+    "watch:style": "sass -r sass-css-importer ../styles/main.scss:dist/style.css"
   },
   "author": "",
   "license": "ISC",
