--- a/docs/package.json
+++ b/docs/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:script": "webpack -w -d -v",
-    "watch:style": "sass -r sass-css-importer ../styles/main.scss:dist/style.css",
-    "watch:style": "sass -r sass-css-importer ../styles/main.scss:dist/style.css"
+    "build:style": "sass -r sass-css-importer ../styles/main.scss:dist/style.css",
+    "watch:style": "sass --watch -r sass-css-importer ../styles/main.scss:dist/style.css"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "history": "^1.9.0",
     "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "react-router": "^1.0.0-rc1"
   },
   "devDependencies": {
     "babel": "^5.8.23",
