--- a/docs/package.json
+++ b/docs/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:script": "webpack -w -d -v",
-    "build:style": "sass -r sass-css-importer ../styles/main.scss:dist/style.css",
-    "watch:style": "sass --watch -r sass-css-importer ../styles/main.scss:dist/style.css"
+    "build:style": "sass -r sass-css-importer styles/main.scss:dist/style.css",
+    "watch:style": "sass --watch -r sass-css-importer styles/main.scss:dist/style.css"
   },
   "author": "",
   "license": "ISC",
