--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:script": "./node_modules/.bin/babel ./scripts -d ./dist --stage=0 --ignore \"__tests__\"",
-    "build:style": "sass -r sass-css-importer styles/main.scss:dist/style.css"
+    "build:style": "sass -r sass-css-importer styles/june.scss:dist/style.css"
   },
   "repository": {
     "type": "git",
