--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:script": "./node_modules/.bin/babel --stage=0 --out-file dist/aia.js scripts/ --source-maps",
-    "build:style": "sass -r sass-css-importer styles/aia.scss:dist/aia.css"
+    "build:style": "sass -r sass-css-importer styles/aia.scss:dist/aia.css",
+    "copy:fonts": "cp styles/icons/one-icons.* dist/fonts"
   },
   "repository": {
     "type": "git",
