--- a/docs/package.json
+++ b/docs/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "history": "^1.9.0",
     "react": "^0.13.3",
+    "react-highlight": "^0.5.0",
     "react-router": "^1.0.0-rc1"
   },
   "devDependencies": {
     "babel": "^5.8.23",
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
+    "babel-plugin-dedent": "^1.1.0",
     "http-server": "^0.8.0",
     "webpack": "^1.12.1"
   }
