--- a/docs/package.json
+++ b/docs/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "history": "^1.9.0",
-    "react": "^0.13.3",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-router": "^1.0.0-rc1"
   },
   "devDependencies": {
