--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/aia.js",
   "scripts": {
     "test": "./node_modulesl/.bin/karma",
-    "build:script": "./node_modules/.bin/babel --stage=0 --out-file dist/aia.js scripts/ --source-maps",
+    "build:script": "webpack -v -d --display-with-errors",
     "build:style": "sass -r sass-css-importer styles/aia.scss:dist/aia.css",
     "copy:fonts": "cp styles/icons/one-icons.* dist/fonts"
   },
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "babel": "^5.8.23",
-    "babel-core": "^5.8.24"
+    "babel-core": "^5.8.24",
+    "babel-loader": "^5.3.2",
+    "webpack": "^1.12.2"
   }
 }
