--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "aia",
   "version": "0.3.11",
   "description": "The UI Toolkit that powers ONE's internal projects",
-  "main": "dist/aia.js",
+  "main": "lib/index",
   "scripts": {
     "test": "./node_modulesl/.bin/karma",
-    "build:script": "webpack -v -d --display-with-errors",
+    "build:script": "babel ./scripts -d ./lib --ignore '__tests__' --stage=0",
+    "build:umd": "NODE_ENV=production webpack scripts/index.js dist/aia.umd.js",
+    "build:min": "NODE_ENV=production webpack -p scripts/index.js dist/aia.umd.js",
     "build:style": "sass -r sass-css-importer styles/aia.scss:dist/aia.css",
-    "copy:fonts": "cp styles/icons/one-icons.* dist/fonts"
+    "copy:fonts": "cp styles/icons/one-icons.* dist/fonts",
+    "docs:server": "node_modules/.bin/http-server -p 3000",
+    "docs:watch:script": "webpack --config=docs/webpack.config.js -w -d -v --display-errors",
+    "docs:build:style": "sass -r sass-css-importer docs/styles/main.scss:dist/style.css",
+    "docs:watch:style": "sass --watch -r sass-css-importer docs/styles/main.scss:dist/style.css",
+    "docs:copy:fonts": "cp ../styles/icons/one-icons.* dist/fonts",
+    "postinstall": "npm run build:script"
   },
   "repository": {
     "type": "git",
@@ -19,14 +27,14 @@
     "url": "https://github.com/dev-onenetworkecommerce/aia/issues"
   },
   "homepage": "https://github.com/dev-onenetworkecommerce/aia",
-  "dependencies": {
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0"
-  },
   "devDependencies": {
     "babel": "^5.8.23",
-    "babel-core": "^5.8.24",
+    "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "history": "^1.12.5",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-router": "^1.0.0-rc3",
     "webpack": "^1.12.2"
   }
 }
