--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^5.3.2",
     "history": "^1.12.5",
     "http-server": "^0.8.5",
+    "json-loader": "^0.5.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-router": "^1.0.0-rc3",
